--- a/README
+++ b/README
@@ -212,6 +212,8 @@ Client randomly crashes on teleport.
 =============
   Changes
 =============
+[Version 0.7.8.1]
+ - Resolve issue of language file being overwritten as ANSI instead of UTF8
 [Version 0.7.8.0]
  - Updated languages to include sign text (Please update any languages you are able!)
  - Resolved NPE due to Bukkit bug with signs
