--- a/README
+++ b/README
@@ -207,7 +207,8 @@ createConflict=Gate conflicts with existing gate
 =============
  Known Bugs
 =============
-Client randomly crashes on teleport.
+Unable to reproduce: Stargates teleport a user to the Nether
+Unable to reproduce: Stargates teleport a user into the ground/under the ground
 
 =============
   Changes
@@ -216,6 +217,7 @@ Client randomly crashes on teleport.
  - Added BungeeCord multi-server support (Requires Stargate-Bungee for BungeeCord)
  - Updated Spanish language file
  - Added basic plugin metrics via http://mcstats.org/
+ - Resolve issue where language updating overwrote custom strings
 [Version 0.7.8.1]
  - Resolve issue of language file being overwritten as ANSI instead of UTF8
 [Version 0.7.8.0]
