--- a/README
+++ b/README
@@ -215,6 +215,8 @@ Bukkit Issue: Stargate will randomly NPE when drawing a sign. Long-standing Bukk
 =============
   Changes
 =============
+[Version 0.7.9.3]
+ - Update BungeeCord integration for b152+
 [Version 0.7.9.2]
  - Remove my custom sign class. Stupid Bukkit team.
  - Will work with CB 1.4.5 builds, but now will break randomly due to Bukkit screwup
