Oops, I broke portal material

--- a/README
+++ b/README
@@ -215,6 +215,8 @@ Bukkit Issue: Stargate will randomly NPE when drawing a sign. Long-standing Bukk
 =============
   Changes
 =============
+[Version 0.7.9.5]
+ - Fixed an issue with portal material not showing up (Oh, that code WAS useful)
 [Version 0.7.9.4]
  - Fixed an issue where water gates broke, oops
 [Version 0.7.9.3]
