Remove permissions support

--- a/README
+++ b/README
@@ -15,9 +15,9 @@ iConomy support added back in, only costs are create, destroy and use.
  Permissions
 =============
 stargate.use -- Allow use of all gates linking to any world in any network (Override ALL network/world permissions. Set to false to use network/world specific permissions)
-  stargate.world -- Allow use of gates linking to any world (For Permissions 2.x/3.x please use stargate.world.*)
+  stargate.world -- Allow use of gates linking to any world
     stargate.world.{world} -- Allow use of gates with a destination in {world}. Set to false to disallow use.
-  stargate.network -- Allow use of gates on all networks (For Permissions 2.x/3.x please use stargate.network.*)
+  stargate.network -- Allow use of gates on all networks
     stargate.network.{network} -- Allow use of all gates in {network}. Set to false to disallow use.
 
 stargate.option -- Allow use of all options
@@ -32,14 +32,14 @@ stargate.option -- Allow use of all options
   
 stargate.create -- Allow creating gates on any network (Override all create permissions)
   stargate.create.personal -- Allow creating gates on network {playername}
-  stargate.create.network -- Allow creating gates on any network (For Permissions 2.x/3.x please use stargate.create.network.*)
+  stargate.create.network -- Allow creating gates on any network
     stargate.create.network.{networkname} -- Allow creating gates on network {networkname}. Set to false to disallow creation on {networkname}
-  stargate.create.gate -- Allow creation of any gate layout (For Permissions 2.x/3.x please use stargate.create.gate.*)
+  stargate.create.gate -- Allow creation of any gate layout
     stargate.create.gate.{gatefile} -- Allow creation of only {gatefile} gates
 
 stargate.destroy -- Allow destruction gates on any network (Orderride all destroy permissions)
   stargate.destroy.personal -- Allow destruction of gates owned by user only
-  stargate.destroy.network -- Allow destruction of gates on any network (For Permissions 2.x/3.x please use stargate.destroy.network.*)
+  stargate.destroy.network -- Allow destruction of gates on any network
     stargate.destroy.network.{networkname} -- Allow destruction of gates on network {networkname}. Set to false to disallow destruction of {networkname}
 
 stargate.free -- Allow free use/creation/destruction of gates
@@ -215,6 +215,8 @@ Bukkit Issue: Stargate will randomly NPE when drawing a sign. Long-standing Bukk
 =============
   Changes
 =============
+[Version 0.7.9.9]
+ - Remove "Permissions" support, we now only support SuperPerms handlers.
 [Version 0.7.9.8]
  - Make sure buttons stay where they should
 [Version 0.7.9.7]
